tests/compile_errors/005-unresolved-placeholders.buzz
import "lib/std";

test "Unknown string interpolated expression" {
    str hello = "hello {world}";
}